feat: set visibility for only first archive week

--- a/src/scss/07_app.scss
+++ b/src/scss/07_app.scss
@@ -16,6 +16,7 @@
     z-index: 1;
     background-color: $color-background;
     padding: $layout-xs-sm-padding;
+    border: 2px solid hotpink;
   }
 
   &__container {
