--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -37,7 +37,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 100%;
+  bottom: 0;
   visibility: hidden;
   border: 2px solid olivedrab;
 
@@ -48,6 +48,7 @@
   &__header {
     display: grid;
     grid-template-columns: 1fr repeat(2, auto);
+    grid-gap: 5px;
     background-color: $color-water;
     border-radius: 5px;
     padding: 5px;
@@ -58,7 +59,10 @@
   }
 
   &__button {
-    color: #fff;
+    fill: #fff;
+    max-width: 40px;
+    width: 100%;
+    padding: 0;
 
     &--prev {
 
@@ -67,6 +71,12 @@
     &--next {
 
     }
+  }
+
+  &__svg  {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
   }
 
   &__list {
