--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -23,6 +23,12 @@
     transition: transform 0.3s ease-out, visibility 0s;
   }
 
+  &__heading {
+    margin: 20px 0;
+    font-size: 1.3rem;
+    font-weight: normal;
+  }
+
   &__weeks {
     position: relative;
     width: 100%;
@@ -37,7 +43,6 @@
   left: 0;
   top: 0;
   visibility: hidden;
-  padding-top: 10px;
 
   &--visible {
     visibility: visible;
