style(scss): modify color pallete

--- a/src/scss/06_overall.scss
+++ b/src/scss/06_overall.scss
@@ -10,9 +10,9 @@ html {
 }
 
 body {
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: "Nunito", Arial, sans-serif;
   font-weight: medium;
-  color: #fff;
+  color: $cold-light-blue;
 }
 
 .button {
