--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -1,20 +1,18 @@
 /////////////////////////////////////////////////////////////////////// COLORS 
-$color-background: #3767AD;
-$color-dark-background: darken($color-background, 10%);
-$color-water: #2196f3;
-$color-grey: #ccc;
-$color-low: rgb(221, 75, 30);
-$color-medium: rgb(224, 152, 17);
-$color-high: rgb(89, 240, 18);
+$cold-darkest-blue: #112f44;
+$cold-dark-blue: #274c66;
+$cold-blue: #4a8eb2;
+$cold-light-blue: #d3f3ff;
 
-$color-emoticon-low: rgb(221, 75, 30);
-$color-emoticon-hight: rgb(89, 240, 18);
+$warm-red: #aa494c;
+$warm-dark-orange: #ba6353;
+$warm-orange: #d68960;
+$warm-light-orange: #e2b673;
+$warm-yellow: #edcf84;
 
 /////////////////////////////////////////////////////////////////////// LAYOUT 
 // HEADER
 $layout-xs-header-height: 60px;
-
-
 
 
 $size-xs-archive-buttons: 25px;
