--- a/src/scss/07_app.scss
+++ b/src/scss/07_app.scss
@@ -5,7 +5,7 @@
   height: 100%;
   width: 100%;
   min-height: 100vh;
-  background-color: $color-background;
+  background-color: $cold-dark-blue;
   padding: 1rem;
 
   &__header {
@@ -16,7 +16,7 @@
     height: $layout-xs-header-height;
     width: 100%;
     z-index: 1;
-    background-color: $color-background;
+    background-color: $cold-dark-blue;
     padding: 0 $layout-xs-sm-padding;
   }
 
@@ -33,14 +33,15 @@
     border-radius: 4px;
     padding: 12px;
     min-width: 200px;
-    color: #fff;
+    color: $cold-light-blue;
     font-size: 0.875rem;
     transition: box-shadow $time-hover-effect, background-color $time-hover-effect;
 
     &--add {
       font-size: 1.125rem;
-      background-color: #fff;
-      color: #000;
+      font-weight: bold;
+      background-color: $cold-blue;
+      color: $cold-darkest-blue;
       margin-bottom: 2rem;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       
@@ -54,7 +55,7 @@
       margin-bottom: 1rem;
 
       &:hover {
-        background-color: $color-water;
+        background-color: $cold-blue;
       }
     }
   }
@@ -76,12 +77,12 @@
   }
 
   &__button {
-    color: #fff;
+    color: $cold-light-blue;
     padding: 0.5rem;
     border: 2px solid transparent;
 
     &:hover {
-      border-bottom-color: #fff;
+      border-bottom-color: $cold-light-blue;
     }
   }
 }
@@ -96,7 +97,7 @@
   }
 
   &__svg {
-    fill: $color-water;
+    fill: $cold-blue;
     width: 100%;
     height: 100%;
 
@@ -106,7 +107,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      fill: #fff;
+      fill: $cold-light-blue;
     }
   }
 }
@@ -122,12 +123,12 @@
   }
 
   &__fill {
-    fill: $color-water;
+    fill: $cold-blue;
   }
 
   &__outline {
     fill: none;
-    stroke: #fff;
+    stroke: $cold-light-blue;
     stroke-width: 10px;
   }
 
