--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
 @import url('https://use.fontawesome.com/releases/v5.8.2/css/all.css');
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,800&display=swap&subset=latin-ext');
 
 @import "00_normalize.scss";
 @import "01_helpers.scss";
