--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 
 @import "03_variables.scss";
 @import "04_mixins.scss";
+@import "05_animations.scss";
 
 @import "06_overall.scss";
 @import "07_app.scss";
