--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -1,6 +1,6 @@
 ////////////////////////////////////////////////////////////////////// ARCHIVE 
 .archive {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
@@ -12,7 +12,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  overflow: auto;
+  overflow: scrollY;
   padding-top: $layout-xs-header-height;
   transform: translateY(-100%);
   transition: transform 0.3s ease-in, visibility 0s 0.3s;
