--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -88,13 +88,14 @@
 
   &__button {
     display: flex;
+    visibility: hidden;
     fill: $cold-light-blue;
     max-width: 30px;
     width: 100%;
     padding: 0;
 
     &--visible {
-      display: flex;
+      visibility: inherit;
     }
 
     &--prev {
