--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @import url("https://use.fontawesome.com/releases/v5.8.2/css/all.css");
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,800&display=swap&subset=latin-ext");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -346,6 +346,70 @@ template {
 .clearfix {
   *zoom: 1; }
 
+@-webkit-keyframes slide-in-from-left {
+  0% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%); }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0); } }
+
+@keyframes slide-in-from-left {
+  0% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%); }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0); } }
+
+@-webkit-keyframes slide-out-to-right {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0); }
+  100% {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%); } }
+
+@keyframes slide-out-to-right {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0); }
+  100% {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%); } }
+
+@-webkit-keyframes slide-in-from-right {
+  0% {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%); }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0); } }
+
+@keyframes slide-in-from-right {
+  0% {
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%); }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0); } }
+
+@-webkit-keyframes slide-out-to-left {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0); }
+  100% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%); } }
+
+@keyframes slide-out-to-left {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0); }
+  100% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%); } }
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -358,9 +422,9 @@ html {
           box-sizing: inherit; }
 
 body {
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: "Nunito", Arial, sans-serif;
   font-weight: medium;
-  color: #fff; }
+  color: #d3f3ff; }
 
 .button {
   background: none;
@@ -384,16 +448,26 @@ body {
   height: 100%;
   width: 100%;
   min-height: 100vh;
-  background-color: #3767AD;
+  background-color: #274c66;
   padding: 1rem; }
   .app__header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: fixed;
     top: 0;
     right: 0;
+    height: 60px;
     width: 100%;
     z-index: 1;
-    background-color: #3767AD;
-    padding: 1rem; }
+    background-color: #274c66;
+    padding: 0 1rem; }
   .app__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -416,7 +490,7 @@ body {
     border-radius: 4px;
     padding: 12px;
     min-width: 200px;
-    color: #fff;
+    color: #d3f3ff;
     font-size: 0.875rem;
     -webkit-transition: background-color 0.2s, -webkit-box-shadow 0.2s;
     transition: background-color 0.2s, -webkit-box-shadow 0.2s;
@@ -425,8 +499,9 @@ body {
     transition: box-shadow 0.2s, background-color 0.2s, -webkit-box-shadow 0.2s; }
     .app__button--add {
       font-size: 1.125rem;
-      background-color: #fff;
-      color: #000;
+      font-weight: bold;
+      background-color: #4a8eb2;
+      color: #112f44;
       margin-bottom: 2rem;
       -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
               box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
@@ -436,31 +511,31 @@ body {
     .app__button--remove {
       margin-bottom: 1rem; }
       .app__button--remove:hover {
-        background-color: #2196f3; }
+        background-color: #4a8eb2; }
 
-.navigation__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  list-style-type: none;
-  margin: 0;
-  padding: 0; }
-
-.navigation__button {
-  color: #fff;
-  padding: 0.5rem;
-  border: 2px solid transparent; }
-  .navigation__button:hover {
-    border-bottom-color: #fff; }
+.navigation {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; }
+  .navigation__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    list-style-type: none;
+    margin: 0;
+    padding: 0; }
+  .navigation__button {
+    color: #d3f3ff;
+    padding: 0.5rem;
+    border: 2px solid transparent; }
+    .navigation__button:hover {
+      border-bottom-color: #d3f3ff; }
 
 .logo {
   -webkit-box-flex: 1;
@@ -479,7 +554,7 @@ body {
     position: relative;
     max-width: 120px; }
   .logo__svg {
-    fill: #2196f3;
+    fill: #4a8eb2;
     width: 100%;
     height: 100%; }
     .logo__svg--color {
@@ -488,7 +563,7 @@ body {
       left: 0;
       width: 100%;
       height: 100%;
-      fill: #fff; }
+      fill: #d3f3ff; }
 
 .glass {
   display: -webkit-box;
@@ -506,10 +581,10 @@ body {
     max-height: 400px;
     margin-bottom: 48px; }
   .glass__fill {
-    fill: #2196f3; }
+    fill: #4a8eb2; }
   .glass__outline {
     fill: none;
-    stroke: #fff;
+    stroke: #d3f3ff;
     stroke-width: 10px; }
   .glass__counter {
     margin: 0;
@@ -523,7 +598,7 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #3767AD;
+  background-color: #274c66;
   font-weight: 300;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -539,8 +614,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  overflow: auto;
-  padding-top: 5rem;
+  overflow: scrollY;
+  padding-top: 60px;
   -webkit-transform: translateY(-100%);
       -ms-transform: translateY(-100%);
           transform: translateY(-100%);
@@ -559,58 +634,93 @@ body {
     -o-transition: transform 0.3s ease-out, visibility 0s;
     transition: transform 0.3s ease-out, visibility 0s;
     transition: transform 0.3s ease-out, visibility 0s, -webkit-transform 0.3s ease-out; }
-  .archive__buttons {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .archive__heading {
+    margin: 20px 0;
+    font-size: 1.3rem;
+    font-weight: normal; }
+  .archive__weeks {
+    position: relative;
+    width: 100%;
+    height: 100%; }
+
+.week {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+  visibility: hidden;
+  -webkit-transition: visibility 0s 0.5s;
+  -o-transition: visibility 0s 0.5s;
+  transition: visibility 0s 0.5s;
+  padding: 0 1rem; }
+  .week--visible {
+    visibility: visible;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    -webkit-transition: visibility 0s;
+    -o-transition: visibility 0s;
+    transition: visibility 0s; }
+  .week--slide-in-from-left {
+    -webkit-animation: slide-in-from-left 0.5s;
+            animation: slide-in-from-left 0.5s; }
+  .week--slide-out-to-left {
+    -webkit-animation: slide-out-to-left 0.5s;
+            animation: slide-out-to-left 0.5s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    pointer-events: none; }
+  .week--slide-out-to-right {
+    -webkit-animation: slide-out-to-right 0.5s;
+            animation: slide-out-to-right 0.5s;
+    pointer-events: none;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards; }
+  .week--slide-in-from-right {
+    -webkit-animation: slide-in-from-right 0.5s;
+            animation: slide-in-from-right 0.5s; }
+  .week__header {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto 1fr auto;
+    grid-template-columns: auto 1fr auto;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 100%;
-    padding: 1rem;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; }
-  .archive__button {
-    padding: 0.6rem 1rem;
-    border-radius: 4px;
-    color: #fff;
-    font-size: 1rem;
-    -webkit-transition: background-color 0.2s;
-    -o-transition: background-color 0.2s;
-    transition: background-color 0.2s; }
-    .archive__button:hover {
-      background-color: #2196f3; }
-  .archive__weeks {
-    width: 100%;
-    padding: 1rem; }
-
-.week {
-  width: 100%; }
-  .week__empty {
-    display: none;
-    text-align: center;
-    margin: 0; }
-    .week__empty--visible {
-      display: block; }
-  .week__heading {
-    margin: 0;
-    background-color: #2196f3;
-    text-align: center;
+    justify-items: center;
+    grid-gap: 5px;
+    background-color: #4a8eb2;
     border-radius: 5px;
     padding: 5px;
-    margin: 5px 0; }
+    margin-bottom: 15px;
+    height: 40px; }
+  .week__heading {
+    margin: 0; }
+  .week__button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    visibility: hidden;
+    fill: #d3f3ff;
+    max-width: 30px;
+    width: 100%;
+    padding: 0; }
+    .week__button--visible {
+      visibility: inherit; }
+    .week__button:hover {
+      fill: #274c66; }
+  .week__svg {
+    width: 100%;
+    height: 100%;
+    pointer-events: none; }
   .week__list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     list-style-type: none;
     padding: 0;
     margin: 0; }
@@ -630,16 +740,16 @@ body {
     -ms-grid-columns: 1fr (auto)[4];
     grid-template-columns: 1fr repeat(4, auto); }
   .entry--edit-mode {
-    background-color: #2b5086; }
-  .entry:not(:first-child) {
-    border-bottom: 1px solid #ccc; }
+    background-color: #112f44; }
+  .entry:not(:last-child) {
+    border-bottom: 1px solid #4a8eb2; }
   .entry__button {
     margin: 0;
     padding: 0.6rem 0.8rem;
-    color: #fff;
+    color: #d3f3ff;
     border-radius: 5px; }
     .entry__button:hover {
-      background-color: #2196f3; }
+      background-color: #4a8eb2; }
   .entry__add {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -649,10 +759,7 @@ body {
             justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center;
-    padding: 10px; }
-  .entry.entry__add {
-    border: none; }
+            align-items: center; }
   .entry__remove {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -667,20 +774,20 @@ body {
     height: 25px;
     overflow: hidden;
     padding: 0;
-    fill: #fff;
+    fill: #d3f3ff;
     -webkit-transition: width 0.5s;
     -o-transition: width 0.5s;
     transition: width 0.5s; }
     .entry__remove--hidden {
       width: 0; }
     .entry__remove:hover {
-      fill: #dd4b1e; }
+      fill: #aa494c; }
   .entry__svg {
     width: 100%;
     height: 100%;
     pointer-events: none; }
   .entry__header--edit-mode {
-    color: #aaa; }
+    color: #274c66; }
   .entry__heading {
     text-align: left;
     margin: 0; }
@@ -704,7 +811,7 @@ body {
     font-weight: bold;
     width: 25px;
     height: 25px;
-    border: 2px solid #fff;
+    border: 2px solid #d3f3ff;
     border-radius: 50%; }
     @media only screen and (min-width: 360px) {
       .entry__value {
@@ -746,7 +853,7 @@ body {
     -o-transition: opacity 0.5s, visibility 0s 0.5s;
     transition: opacity 0.5s, visibility 0s 0.5s; }
     .edition__button--visible {
-      visibility: visible;
+      visibility: inherit;
       opacity: 1;
       -webkit-transition: opacity 0.5s, visibility 0s;
       -o-transition: opacity 0.5s, visibility 0s;
@@ -756,7 +863,7 @@ body {
   .edition__svg {
     width: 100%;
     height: 100%;
-    fill: #fff;
+    fill: #d3f3ff;
     pointer-events: none; }
   @media only screen and (min-width: 360px) {
     .edition {
@@ -802,7 +909,7 @@ body {
     bottom: 0;
     height: 100%;
     width: 100%;
-    fill: #dd4b1e;
+    fill: #edcf84;
     opacity: 0;
     visibility: hidden;
     -webkit-transform: translateX(100%);
@@ -814,24 +921,22 @@ body {
     transition: opacity 0.2s, transform 0.2s;
     transition: opacity 0.2s, transform 0.2s, -webkit-transform 0.2s; }
     .indicator__svg--emo-1 {
-      fill: #e24114; }
+      fill: #aa494c; }
     .indicator__svg--emo-2 {
-      fill: #c75a14; }
+      fill: #ba6353; }
     .indicator__svg--emo-3 {
-      fill: #ac7314; }
+      fill: #ba6353; }
     .indicator__svg--emo-4 {
-      fill: #918c14; }
+      fill: #d68960; }
     .indicator__svg--emo-5 {
-      fill: #76a514; }
+      fill: #d68960; }
     .indicator__svg--emo-6 {
-      fill: #5bbe14; }
+      fill: #e2b673; }
     .indicator__svg--emo-7 {
-      fill: #40d714; }
-    .indicator__svg--emo-8 {
-      fill: #25f014; }
+      fill: #e2b673; }
     .indicator__svg--visible {
       opacity: 1;
-      visibility: visible;
+      visibility: inherit;
       -webkit-transform: translateX(0);
           -ms-transform: translateX(0);
               transform: translateX(0); }
@@ -848,7 +953,7 @@ body {
           align-items: center;
   visibility: hidden;
   grid-auto-rows: 100px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(17, 47, 68, 0.8);
   position: fixed;
   top: 0;
   left: 0;
@@ -877,7 +982,8 @@ body {
     font-size: 6rem;
     font-weight: bold;
     margin: 0;
-    border: 6px solid #fff;
+    color: #d3f3ff;
+    border: 6px solid #d3f3ff;
     border-radius: 50%;
     width: 100%;
     height: 100%;
@@ -899,9 +1005,9 @@ body {
             align-items: center;
     width: 100%;
     height: 100%;
-    fill: #aaa; }
+    fill: #4a8eb2; }
     .new-entry__button:hover {
-      fill: #fff; }
+      fill: #d3f3ff; }
   .new-entry__svg {
     width: 100%;
     height: 100%;
