style(scss): set separating lines with margins between entries items

--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -25,6 +25,10 @@ $layout-xs-sm-padding: 1rem;
 $media-sm: 360px;
 $media-md: 768px;
 $media-lg: 1024px;
+/////////////////////////////////////////////////////////////////// DECORATION 
+$br-items: 5px;
+
+
 ///////////////////////////////////////////////////////////////////////// TIME 
 
 $time-hover-effect: 0.2s;
