style(scss): add basic burger button style

--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -12,9 +12,9 @@ $warm-yellow: #edcf84;
 
 /////////////////////////////////////////////////////////////////////// LAYOUT 
 // HEADER
-$layout-xs-header-height: 60px;
+$layout-xs-header-height: 64px;
 
-
+$size-logo-height: 36px;
 $size-xs-archive-buttons: 25px;
 $size-sm-archive-buttons: 30px;
 
