--- a/src/scss/06_overall.scss
+++ b/src/scss/06_overall.scss
@@ -10,13 +10,14 @@ html {
 }
 
 body {
+  color: $cold-light-blue;
   font-family: "Nunito", Arial, sans-serif;
   font-weight: medium;
-  color: $cold-light-blue;
 }
 
 .button {
   background: none;
   border: none;
   cursor: pointer;
+  padding: 0;
 }
