chore: divide 'app' scss module on 'landing' and 'navigation' modules

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,5 +9,6 @@
 @import "05_animations.scss";
 
 @import "06_overall.scss";
-@import "07_app.scss";
-@import "08_archive.scss";
+@import "07_navigation.scss";
+@import "08_landing.scss";
+@import "09_archive.scss";
