chore: reorganise page structure for mobile menu layout

--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -36,5 +36,7 @@ $time-edit-mode: 0.2s;
 $time-edit-buttons: 0.5s;
 $time-week-slide: 0.5s;
 
+$time-mobile-menu: 0.5s;
+
 $edit-group-cols: 4;
 $edit-group-col-gap: 5px;
