--- a/src/scss/09_archive.scss
+++ b/src/scss/09_archive.scss
@@ -1,28 +1,20 @@
 ////////////////////////////////////////////////////////////////////// ARCHIVE 
 .archive {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: $cold-dark-blue;
+  //background-color: $cold-dark-blue;
   font-weight: 300;
   display: flex;
-  visibility: hidden;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   padding-top: $layout-xs-header-height;
-  transform: translateY(-100%);
-  transition: transform 0.3s ease-in, visibility 0s 0.3s;
+  //transition: transform 0.3s ease-in, visibility 0s 0.3s;
   overflow-x: hidden;
   overflow-y: auto;
-
-  &--visible {
-    visibility: visible;
-    transform: translateY(0);
-    transition: transform 0.3s ease-out, visibility 0s;
-  }
 
   &__heading {
     margin: 15px 0;
