feat: initial style for mobile menu first section

--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -14,7 +14,7 @@ $warm-yellow: #edcf84;
 // HEADER
 $layout-xs-header-height: 64px;
 
-$size-logo-height: 36px;
+$size-main-buttons: 30px;
 $size-xs-archive-buttons: 25px;
 $size-sm-archive-buttons: 30px;
 
@@ -36,7 +36,7 @@ $time-edit-mode: 0.2s;
 $time-edit-buttons: 0.5s;
 $time-week-slide: 0.5s;
 
-$time-mobile-menu: 0.5s;
+$time-mobile-menu: 0.4s;
 
 $edit-group-cols: 4;
 $edit-group-col-gap: 5px;
