--- a/src/scss/09_archive.scss
+++ b/src/scss/09_archive.scss
@@ -16,10 +16,37 @@
   overflow-x: hidden;
   overflow-y: auto;
 
+  &__header {
+    width: 100%;
+    display: grid;
+    padding: 0 $layout-xs-sm-padding;
+    grid-template-columns: $size-main-buttons 1fr $size-main-buttons;
+
+    &::before { // needed to make heading in the center
+      content: "";
+    }
+  }
+
   &__heading {
     margin: 15px 0;
     font-size: 1.3rem;
     font-weight: normal;
+    text-align: center;
+  }
+
+  &__button {
+    fill: $cold-blue;
+    width: 100%;
+
+    &:hover {
+      fill: $cold-light-blue;
+    }
+  }
+
+  &__svg {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
   }
 
   &__weeks {
