chore: add scss modules for stats and settings

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,5 @@
 @import "07_navigation.scss";
 @import "08_landing.scss";
 @import "09_archive.scss";
+@import "10_stats.scss";
+@import "11_settings.scss";
